@@ -111,6 +111,7 @@ case "$host" in
 	AC_DEFINE(WITH_IRIX_ARRAY)
 	AC_DEFINE(WITH_IRIX_PROJECT)
 	AC_DEFINE(WITH_IRIX_AUDIT)
+	AC_DEFINE(WITH_IRIX_JOBS)
 	no_libsocket=1
 	no_libnsl=1
 	AC_DEFINE(BROKEN_INET_NTOA)
@@ -204,22 +205,24 @@ mips-sony-bsd|mips-sony-newsos4)
 	LDFLAGS="$LDFLAGS -L/usr/local/lib"
 	MANTYPE='$(CATMAN)'
 	mansubdir=cat
-	LIBS="$LIBS -lgen -lsocket -los -lprot -lx"
+	LIBS="$LIBS -lgen -lsocket -los -lprot -lx -ltinfo -lm"
 	no_dev_ptmx=1
 	RANLIB=true
 	AC_DEFINE(BROKEN_SYS_TERMIO_H)
 	rsh_path="/usr/bin/rcmd"
 	AC_DEFINE(HAVE_SCO_PROTECTED_PW)
+	AC_DEFINE(DISABLE_SHADOW)
 	;;
 *-*-sco3.2v5*)
 	CFLAGS="$CFLAGS -I/usr/local/include"
 	LDFLAGS="$LDFLAGS -L/usr/local/lib"
 	MANTYPE='$(CATMAN)'
 	mansubdir=cat
-	LIBS="$LIBS -lgen -lsocket -lprot -lx"
+	LIBS="$LIBS -lgen -lsocket -lprot -lx -ltinfo -lm"
 	no_dev_ptmx=1
 	rsh_path="/usr/bin/rcmd"
 	AC_DEFINE(HAVE_SCO_PROTECTED_PW)
+	AC_DEFINE(DISABLE_SHADOW)
 	;;
 *-dec-osf*)
 # This is untested
